Fix Safari bug where background color in buttons was not showing

--- a/TWLight/static/css/new-local.css
+++ b/TWLight/static/css/new-local.css
@@ -935,6 +935,7 @@ NEW MY LIBRARY COLLECTION TILES CSS
     color: #FFFFFF;
     background-color: #3366CC;
     width: 50%;
+    -webkit-appearance: none;
 }
 
 .access-apply-button:hover{
@@ -961,6 +962,7 @@ and (max-device-width : 480px) {
         background-color: #3366CC;
         width: 100%;
         margin-bottom: 10px;
+        -webkit-appearance: none;
     }
 
     .renew-extend-button{
@@ -978,6 +980,7 @@ and (max-device-width : 1024px) {
         background-color: #3366CC;
         width: 100%;
         margin-bottom: 10px;
+        -webkit-appearance: none;
     }
 
     .renew-extend-button{
